--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-webp": "^4.0.1",
+    "jquery": "3.4.1",
     "stylelint": "^13.0.0"
   },
   "scripts": {
@@ -47,5 +48,6 @@
   ],
   "engines": {
     "node": "8.16"
-  }
+  },
+  "dependencies": {}
 }
